# machine-learning-deployment

./: CMakeLists.txt  README.md  main.cpp
libs/: libopencv_highgui.405.dylib  libopencv_imgcodecs.405.dylib  libopencv_videoio.405.dylib
machine-learning-deployment/: main.c  main.cpp
machine-learning-deployment.xcodeproj/: project.pbxproj
machine-learning-deployment.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
machine-learning-deployment.xcodeproj/xcuserdata/xiaohao.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: main.cpp
